--- a/ArtSphere-API/package.json
+++ b/ArtSphere-API/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-api",
-  "version": "1.0.1",
+  "version": "1.0.8",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
@@ -22,7 +22,9 @@
     "dotenv": "^16.4.5",
     "hapi-auth-jwt2": "^10.6.0",
     "jsonwebtoken": "^9.0.2",
-    "sharp": "^0.33.4"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.4",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3",
