--- a/ArtSphere-API/.env
+++ b/ArtSphere-API/.env
@@ -1,6 +1,6 @@
 #CONFIG
-REFRESH_TOKEN_SECRET=Y#kP8!4iGzU^@qR6lOwJx3yF2mV9cXeN7sTgMhCbA4nD5vE6tY
-ACCESS_TOKEN_SECRET=L2s@P3oDxQ#J6nM9cV7zY5kH8fB2rG1lU4aF!T@vN7eW6iZ8jX
+REFRESH_TOKEN_SECRET=your token
+ACCESS_TOKEN_SECRET=your refresh token
 
 PORT=8080
 
@@ -10,14 +10,14 @@ HOST="0.0.0.0"
 db="test"
 
 # bucket
-FEEDS_STORAGE_BUCKET='feeds_files'
+FEEDS_STORAGE_BUCKET='your bucket'
 
-PREDICT_BUCKET=predict_loader
+PREDICT_BUCKET=your bucket
 
 USER_STORAGE_BUCKET=
 
 #URL
-MODEL_URL='https://storage.googleapis.com/ml_rss/model%20v-4/model.json'
+MODEL_URL='your model url'
 
 #keys
 SERVICE_ACCOUNT_KEY_PATH=./src/keys/storage.json
